# event_callback

./: .gitignore  readme.md  setup.py
event-callback-app/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
event-callback-app/src/: App.tsx  index.css  main.tsx
event-callback-app/src/components/: ButtonGroup.tsx  CollapseCard.tsx  Copy.tsx  GroupTable.tsx  ModalForm.tsx  StateDisplay.tsx  Table.tsx  TableGroup.tsx  Toast.tsx  Tree.tsx  (+2 more)
event_callback/: CMakeLists.txt  package.xml  readme.md  requirements.txt  setup.py
event_callback/event_callback/: __init__.py  core.py  ros_utils.py  types.py  utils.py
event_callback/event_callback/components/: http_proxy.py  ros.py  socket.py
event_callback/event_callback/components/http/: __init__.py  core.py  message_handler.py  proxy.py  ui_config.py  utils.py
event_callback/event_callback/components/http_proxy/: __init__.py  http_proxy.py  utils.py
event_callback/event_callback/components/socket/: __init__.py  common.py  tcp.py  udp.py
event_callback/src/components/: ros.hpp
event_callback/src/core/: core.hpp
event_callback/src/event_callback/: __init__.py  core.py  types.py  utils.py
event_callback/src/event_callback/components/: http.py  http_proxy.py  ros.py  ros_httproxy.py  socket.py
event_callback/src/event_callback/components/http/: core.py  message_handler.py  ui_config.py
event_callback/src/utils/: utils.hpp
event_callback/tests/: conftest.py  test_http.py  test_ros.py  test_stress.py  test_tcp.py  test_udp.py
event_callback_msg/: CMakeLists.txt  package.xml
(+12 files in other folders)
